8 Apr 1997  Jim Kingdon

	* rcmd.c: Instead of returning -1 and passing that back to
	startserver.c which will print a very vague error message, call
	error() right away with a specific message.  This also fixes
	some places where we had bogusly called GetLastError instead of
	WSAGetLastError.
	(init_winsock): Remove call to setsockopt.  It was an artifact
	from before the time that we defined NO_SOCKET_TO_FD, doesn't
	seem to be needed any more, and fails with some non-Microsoft
	winsock implementations.

Wed Apr  2 14:08:10 1997  Vince Del Vecchio  <vdelvecc@spd.analog.com>
			  and Jim Kingdon

	* sockerror.c: New file.
	* config.h (SOCK_STRERROR, SOCK_ERRNO): New macros.
	* startserver.c: In reporting errors from socket calls, use
 	SOCK_STRERROR and SOCK_ERRNO since strerror(errno) doesn't work
 	for Win32.
	* rcmd.c (rcmd_authenticate): Use WSASetLastError instead of
 	assigning to errno, since that is where the caller will look.

Sun Apr  6 17:22:19 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (copy_file): Add comment about CopyFile.

Wed Mar 26 13:13:41 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: Also mention tar and gzip.

	* README: Binaries are now under 1.9, not 1.8.3, on
	ftp.cyclic.com.  Also mention http URL.

13 Mar 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (get_homedir): Allocate pathbuf; removes arbitrary
	limit.

Wed Mar 12 16:10:01 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (get_homedir): Expand comment about HOME
	vs. HOMEDRIVE/HOMEPATH.

	* config.h (HAVE_SETVBUF): Removed; no longer used.

Thu Mar  6 19:46:53 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: tab stop setting apparently was under "Editor" in Visual
	C++ 2.x but it is under "Tabs" in Visual C++ 4.x.
	List number of warnings for regex.c (103, which is actually down
	from 121 prior to the change I just made to regex.c).

Sat Feb 15 15:27:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
